name:                twine
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/bhurt/twine#readme
license:             BSD3
license-file:        LICENSE
author:              Brian Hurt
maintainer:          bhurt42@gmail.com
copyright:           2016 Brian Hurt
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Twine
                        , Data.Twine.Internal.Glob
                        , Data.Twine.Stringish
  build-depends:       base >= 4.7 && < 5
                        , bytestring >= 0.10 && < 0.11
                        , primitive >= 0.6 && < 0.7
                        , text >= 1.2 && < 1.3
  default-language:    Haskell2010
  default-extensions:  DeriveGeneric, DeriveDataTypeable, OverloadedStrings
  ghc-options:         -Wall -O2

source-repository head
  type:     git
  location: https://github.com/bhurt/twine
